voir erreur d'ajout des champs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+
+        <!-- ajout de l'alerte insertBefore -->
+        
+        <h1>Ajoutez un livre !</h1>
+
+        <form  class="book-form">
+
+            <div class="inputs">
+                <label for="titre">Titre</label>
+                <input type="text" id="titre">
+            </div>
+
+            <div class="inputs">
+                <label for="auteur">Auteur</label>
+                <input type="text" id="auteur">
+            </div>
+
+            <div class="inputs">
+                <label for="annee">Année</label>
+                <input type="text" id="annee">
+            </div>
+
+            <button>Envoyer</button>
+
+        </form>
+
+        <hr>
+
+        <table>
+            <thead>
+                <th>Titre</th>
+                <th>Auteur</th>
+                <th>Année</th>
+            </thead>
+            <tbody class="book-list">
+
+            </tbody>
+        </table>
+
+    </div>
 
     <script src="script.js"></script>
 </body>
